Sun Apr 04 22:30:12 2004  George Lebl <jirka@5z.com>

	* src/geniustests.txt: added some tests that went wrong at some
	  point long time ago

Sun Apr 04 17:39:55 2004  George Lebl <jirka@5z.com>

	* lib/functions/complex_numbers.gel: add cis function.  Also fix
	  the MoebiusMapping* definitions

	* lib/functions/Makefile.am: forgot to include complex_numbers.gel
	  in the library DOH! this actually adds all those functions promised
	  in 0.6.0.  Affects: Argument, arg, Arg, MoebiusDiskMapping,
	  MoebiusMapping, MoebiusMappingInftyToOne, MoebiusMappingInftyToZero,
	  MoebiusMappingInftyToInfty.

Sun Apr 04 17:27:33 2004  George Lebl <jirka@5z.com>

	* src/graphing.c: when parsing errors occur print them before saying
	  we couldn't parse anything.

Sun Apr 04 17:19:08 2004  George Lebl <jirka@5z.com>

	* src/eval.c: when 'i' is used uninitialized then suggest using '1i'
	  instead

Sun Apr 04 16:35:38 2004  George Lebl <jirka@5z.com>

	* src/genius.c, src/gnome-genius.c: Make the console version be
	  translated though there are still utf-8 issues.  Also the welcome
	  string is now slightly different since gettext seemed to have a fit
	  with the escapes and all that.

Sun Apr 04 15:52:00 2004  George Lebl <jirka@5z.com>

	* src/calc.[ch], eval.c, src/funclib.c, src/graphing.c, src/matop.c,
	  src/mpwrap.[ch], src/plugin.c:  Cleanup and update the copyright
	  strings, add "gel_" to the print_etree functions.

	* src/eval.c: fix "number <=> string" which was returning completely
	  wrong answers

	* src/geniustests.txt: add tests for comparison

2004-04-03  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

Tue Mar 30 15:08:05 2004  George Lebl <jirka@5z.com>

	* Release 0.6.0

	* src/mpwrap.c: define G_MAXINT32 if not defined to allow compilation
	  with older glib

Tue Mar 30 14:56:27 2004  George Lebl <jirka@5z.com>

	* src/mpwrap.c: further optimization of the mp* free lists gets some